# fortress

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md
.github/workflows/: build.yml  build_cmake.yml
.gitlab/: qt_downloader.txt
NetworkingExample/: CMakeLists.txt  SimpleClient.cpp  SimpleClientV2.cpp  SimpleServer.cpp
app/: CMakeLists.txt  main.cpp
esp32/: platformio.ini
esp32/include/: ACF2101.h  ADS8332.h  AsyncSyncronization.h  MCP4726.h  TCPServer.h  TaskSafeQueue.h  pinMapping.h
esp32/src/: ACF2101.cpp  ADS8332.cpp  MCP4726.cpp  TCPServer.cpp  main.cpp
include/: Backend.h  ChartModel.h  Constants.h  FRServer.h  Runnable.h  SharedParams.h  ValueNoise1D.h  argparse.h  client_v2.h  constants.h
include/Networking/: client.h  commons.h  connection.h  connections_v2.h  message.h  server.h  threadsafe_queue.h
include/networking/: client_interface.h  commons.h  message.h  server_interface.h  tcp_connection.h  threadsafe_queue.h
networking_examples/: CMakeLists.txt  SimpleClient.cpp  SimpleServer.cpp
qml/: FRCharts.qml  FRGauge.qml  FRMenuBar.qml  FRNotSavedAlert.qml  FRToolBar.qml  Gauge.qml  main.qml  qml.qrc
server/: CMakeLists.txt  main.cpp
src/: Backend.cpp  CMakeLists.txt  ChartModel.cpp  FRServer.cpp  Runnable.cpp  main.cpp  main.qml
test/: CMakeLists.txt  main.cpp
